попытка починить сборщик

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,7 +5,6 @@ on:
     types: [published]
 
 env:
-  APP_NAME: webdav-drive
   OUTPUT_EXE: webdav-drive.exe
 
 jobs:
@@ -14,8 +13,6 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-        with:
-          fetch-depth: 0  # Получить полную историю для корректного определения версии
 
       - name: Set up Go
         uses: actions/setup-go@v5
@@ -23,57 +20,22 @@ jobs:
           go-version: '1.25'
 
       - name: Install Inno Setup
-        run: |
-          choco install innosetup -y
+        run: choco install innosetup -y
 
-      - name: Initialize Go module and download dependencies
-        run: |
-          # Убедимся, что мы в корне проекта
-          cd ${{ github.workspace }}
-          go mod tidy
-          go mod download
+      - name: Tidy dependencies
+        run: go mod tidy
 
       - name: Build Go executable
-        run: |
-          cd ${{ github.workspace }}
-          go build -ldflags="-H windowsgui -s -w -X main.version=${{ github.ref_name }}" -o ${{ env.OUTPUT_EXE }} ./src
+        run: go build -ldflags="-H windowsgui -s -w -X main.version=${{ github.event.release.tag_name }}" -o src/webdav-drive.exe ./src
 
       - name: Create SHA256 checksum
         run: |
-          cd ${{ github.workspace }}
-          certutil -hashfile ${{ env.OUTPUT_EXE }} SHA256 | findstr /r "[0-9a-fA-F]" > ${{ env.OUTPUT_EXE }}.sha256
-
-      - name: Verify executable exists
-        run: |
-          cd ${{ github.workspace }}
-          if not exist "${{ env.OUTPUT_EXE }}" (
-            echo "Executable not found!"
-            exit 1
-          )
-
-      - name: Prepare installer files
-        run: |
-          cd ${{ github.workspace }}
-          # Создаем директорию bin, если её нет
-          if not exist "bin" mkdir bin
-          # Копируем exe файл в bin для Inno Setup
-          copy ${{ env.OUTPUT_EXE }} bin\ > nul
-          # Также копируем в src для совместимости
-          copy ${{ env.OUTPUT_EXE }} src\ > nul
+          cd src
+          certutil -hashfile webdav-drive.exe SHA256 | findstr /r "[0-9a-fA-F]" > webdav-drive.exe.sha256
 
       - name: Build Inno Setup installer
-        run: |
-          cd ${{ github.workspace }}
-          iscc "installer\webdav-drive.iss"
+        run: iscc "installer\webdav-drive.iss"
         shell: cmd
-
-      - name: Verify installer exists
-        run: |
-          cd ${{ github.workspace }}
-          if not exist "webdav-drive-setup.exe" (
-            echo "Installer not found!"
-            exit 1
-          )
 
       - name: Upload portable executable
         uses: actions/upload-release-asset@v1
@@ -81,7 +43,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ github.event.release.upload_url }}
-          asset_path: ${{ github.workspace }}/${{ env.OUTPUT_EXE }}
+          asset_path: ./src/webdav-drive.exe
           asset_name: webdav-drive.exe
           asset_content_type: application/octet-stream
 
@@ -91,7 +53,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ github.event.release.upload_url }}
-          asset_path: ${{ github.workspace }}/${{ env.OUTPUT_EXE }}.sha256
+          asset_path: ./src/webdav-drive.exe.sha256
           asset_name: webdav-drive.exe.sha256
           asset_content_type: text/plain
 
@@ -101,6 +63,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ github.event.release.upload_url }}
-          asset_path: ${{ github.workspace }}/webdav-drive-setup.exe
+          asset_path: ./webdav-drive-setup.exe
           asset_name: webdav-drive-setup.exe
           asset_content_type: application/octet-stream
