--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,24 +1,16 @@
 name: Build and Release (Beta)
-
 on:
   release:
     types: [published]
-
 permissions:
   contents: write
-
-env:
-  OUTPUT_EXE: webdav-drive.exe
-
 jobs:
   build:
     runs-on: windows-latest
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-      - name: Set up Go
-        uses: actions/setup-go@v5
+      - uses: actions/setup-go@v5
         with:
           go-version: '1.25'
 
@@ -28,7 +20,7 @@ jobs:
       - name: Tidy dependencies
         run: go mod tidy
 
-      - name: Build Go executable (portable)
+      - name: Build Go executable
         run: go build -ldflags="-H windowsgui -s -w -X main.version=${{ github.event.release.tag_name }}" -o src/webdav-drive.exe ./src
 
       - name: Create SHA256 checksum
@@ -40,11 +32,8 @@ jobs:
         run: iscc "installer\webdav-drive.iss"
         shell: cmd
 
-      # === ЗАГРУЗКА АССЕТОВ ===
-
-      - name: Upload files executable
+      - name: Upload all assets
         uses: softprops/action-gh-release@v2
-        if: success()
         with:
           files: |
             src/webdav-drive.exe
